[gd_scene load_steps=4 format=3 uid="uid://clvwux55ir176"]

[ext_resource type="Script" uid="uid://cvylmd6eaimnm" path="res://src/code/puzzle_piece.gd" id="1_a0ykv"]
[ext_resource type="Texture2D" uid="uid://bf7nyqajpa8fa" path="res://assets/images/puzzleteil_base.png" id="2_7wynd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7wynd"]
size = Vector2(104, 104)

[node name="PuzzlePiece" type="Node2D"]
z_index = 5
script = ExtResource("1_a0ykv")

[node name="BaseSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_7wynd")
centered = false

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(80, 80)
shape = SubResource("RectangleShape2D_7wynd")

[node name="TabAndSlotSprites" type="Node2D" parent="."]

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
